[package]
name = "crossterm_screen"
version = "0.3.1"
authors = ["T. Post"]
description = "A cross-platform library for raw and alternate screen."
repository = "https://github.com/crossterm-rs/crossterm-screen"
documentation = "https://docs.rs/crossterm_screen/"
license = "MIT"
keywords = ["screen", "alternate", "raw", "crossterm", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "deprecated" }

[dependencies]
crossterm_utils = { version = "0.4.0" }

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.8", features = ["minwindef", "wincon"] }
crossterm_winapi = { version = "0.2.1" }
